--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_auth: ^1.4.1
   cloud_firestore: ^2.2.2
   social_share: ^2.1.1
+  share_plus: ^2.1.4
+  flutter_share_me: ^0.10.1
+  share_plus_web: ^2.0.4
 
 dev_dependencies:
   flutter_test:
